bynkc/tests/fixtures/negative/47_uses_unknown_commons/src/foo/main.bynk
commons foo

uses no.such.lib

type T = Int
